Changing up MathJax config to try and get inline formatting.

--- a/_includes/mathjax.html
+++ b/_includes/mathjax.html
@@ -2,5 +2,5 @@
   Selective usage of MathJax as there is little reason to have it on __every__ page.
 {% endcomment %}
 <script type="text/javascript" async
-  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
