--- a/assets/main.scss
+++ b/assets/main.scss
@@ -2,6 +2,6 @@
 ---
 
 @import '{{ site.theme }}';
-@import 'code-formating';
-@import 'link-formating';
+@import 'code-formatting';
+@import 'link-formatting';
 // @debug "## main.scss";
